syntax = "proto3";
package gitopia.gitopia.gitopia;

import "gogoproto/gogo.proto";

option go_package = "github.com/gitopia/gitopia/v4/x/gitopia/types";

enum TaskType {
  option (gogoproto.goproto_enum_prefix) = false;

  TASK_TYPE_FORK_REPOSITORY = 0 [(gogoproto.enumvalue_customname) = "TypeForkRepository"];
  TASK_TYPE_SET_PULL_REQUEST_STATE = 1 [(gogoproto.enumvalue_customname) = "TypeSetPullRequestState"];
}

enum TaskState {
  option (gogoproto.goproto_enum_prefix) = false;

  TASK_STATE_PENDING = 0 [(gogoproto.enumvalue_customname) = "StatePending"];
  TASK_STATE_SUCCESS = 1 [(gogoproto.enumvalue_customname) = "StateSuccess"];
  TASK_STATE_FAILURE = 2 [(gogoproto.enumvalue_customname) = "StateFailure"];
}

message Task {
  uint64 id = 1;
  TaskType type = 2;
  TaskState state = 3;
  string message = 4; 
  string creator = 5;
  string provider = 6;
}
